# os-kidshell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Environment.cpp  Environment.h  EnvironmentManager.cpp  EnvironmentManager.h  ExecArgumentsHolder.hpp  Executor.cpp  Executor.h  Interpreter.cpp  KidShell.cpp  KidShell.h  Logger.cpp  Logger.h  Makefile  ParseUtils.cpp  ParseUtils.h  ParserException.hpp  README.md  README.org  Runner.h  RunnerException.hpp  ShellHelper.cpp  ShellHelper.h  command.cpp  command.hpp  echo.cpp  env.cpp  env.hpp  environment.cpp  environment.h  first_task.cpp  hello.cpp  input.txt  kidshell.c  kidshell.cpp  kidshell.h  kindshell.cpp  main.cpp  (+15 more)
argparser/: ArgParser.cpp  ArgParser.h  ParserException.h
hw/: kidshell.cpp
hw1-utusikov/: CMakeLists.txt  Enviroment.cpp  Enviroment.h  Interpreter.cpp  Makefile  Program.cpp  Program.h  README.md  test  test.cpp
inc/: Command.h  Environment.h  ExecArgumentsHolder.h
include/: command.h  env_storage.h  env_wrapper.h  parser.h  vshell.h
shell/: CMakeLists.txt  backup  launcher.cpp  shell.cpp
src/: Command.cpp  Environment.cpp  ExecArgumentsHolder.cpp  Runner.cpp  env_storage.cpp  env_wrapper.cpp  exit_messages.c  exit_messages.h  hashmap.c  hashmap.h  main.c  main.cpp  parser.cpp  shell.cpp  vshell.cpp
